force-app/main/default/objects/Project__c/fields/Total_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Hours__c</fullName>
    <label>Total Estimated Hours</label>
    <summarizedField>Work_Item__c.Estimated_Hours__c</summarizedField>
    <summaryForeignKey>Work_Item__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>