force-app/main/default/objects/Project__c/listViews/Active_Projects.listView-meta.xml
<ListView>
    <fullName>Active_Projects</fullName>
    <label>Active Projects</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Total_Estimated_Hours__c</columns>
    <columns>Total_Actual_Hours__c</columns>
</ListView>